repair broken css

--- a/src/Components/Csv-Parser-Compo/csv-parser.css
+++ b/src/Components/Csv-Parser-Compo/csv-parser.css
@@ -3,4 +3,16 @@
     width: 100vw;
     height: 100%;
     justify-content: center;
+    flex-wrap: wrap;
+}
+.playersCharts{
+    width: 50%;
+    height: auto;
+}
+
+.buttonsDiv{
+    width: 100%;
+}
+.buttonsDiv button{
+    width: 40%;
 }
